# Literature-Review-Assistant

./: .env.example  .gitignore  Makefile  README.md  REFACTORING_ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  nginx-http.conf  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup-ssl.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  __init__.py  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  critic_agent.py  planner_agent.py  search_agent.py  summarizer_agent.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  health.py  reviews.py  stream.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  auth.py  exceptions.py  logging_config.py
backend/app/db/: __init__.py  database.py  models.py  review_repository.py  user_repository.py
backend/app/models/: __init__.py  requests.py  responses.py
backend/app/orchestrator/: __init__.py  litrev_orchestrator.py
backend/app/services/: __init__.py  review_service.py  session_manager.py
backend/app/teams/: __init__.py  base.py  litrev_team.py
backend/app/tools/: __init__.py  arxiv_tool.py  base.py  semantic_scholar_tool.py  tavily_tool.py  web_reader_tool.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_agents.py  test_teams.py  test_tools.py
docs/: API.md  ARCHITECTURE.md
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/chat/: HistorySidebar.tsx  MessageDisplay.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/papers/: PaperCard.tsx  PaperList.tsx
frontend/src/components/providers/: AntdStyleRegistry.tsx
frontend/src/components/search/: SearchForm.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/api/: auth.ts  client.ts  reviews.ts
frontend/src/lib/context/: AuthContext.tsx
frontend/src/lib/hooks/: useReviewStream.ts
frontend/src/lib/storage/: chatHistory.ts
frontend/src/lib/types/: api.ts
frontend/src/providers/: QueryProvider.tsx
scripts/: git_commits.sh  run_dev.sh  run_prod.sh
src/: __init__.py
src/agents/: __init__.py  base.py  search_agent.py  summarizer_agent.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  logging_config.py
src/models/: __init__.py  schemas.py
src/orchestrator/: __init__.py  litrev_orchestrator.py
src/teams/: __init__.py  base.py  litrev_team.py
src/tools/: __init__.py  arxiv_tool.py  base.py
tests/: conftest.py
tests/unit/: test_agents.py  test_teams.py  test_tools.py
